2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Added close chat menu item.
	* Chats/ChatView.cs: Made Close() method public.
	
	  Removed accelerator from Close menu item, MainWindow handles this now.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Preferences/ServerView.cs: glade3 renamed some widgets because of a
	  conflict ignoring the fact that it those have different toplevel widgets

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Reset cursor position to the end when going up in the command
	  history.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Don't rely on Application.Quit(), call Environment.Quit()
	  afterwards to be sure we are quitting.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, EngineManagerDialog.cs, FirstStartDruid.cs,
	  Frontend-GNOME.mdp, EngineDruid.cs, NewEngineDruid.cs: Renamed
	  NewEngineDruid to EngineDruid.
	
	  Implemented edit mode of EngineDruid (closes trac bug #14).
	* SteticPreferencesDialog.cs: Added license header.

2008-07-16  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs, Preferences/PreferencesDialog.cs,
	  Chats/GroupChatView.cs, Chats/ChatView.cs, Entry.cs, ChatViewManager.cs:
	  Implemented basic theming support (closes trac bug #19).

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs, GnomeUI.cs, ChatViewManager.cs: Failed attempt
	  to fix trac bug #50

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, FindGroupChatDialog.cs,
	  gtk-gui/Smuxi.Frontend.Gnome.FindGroupChatDialog.cs, gtk-gui/gui.stetic:
	  Implemented FindGroupChatDialog (closes trac bug #13).

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* Chats/SessionChatView.cs, Chats/PersonChatView.cs, Chats/GroupChatView.cs,
	  Chats/ChatView.cs: Fixed icon / label position on tabs.

2008-07-14  Mirco Bauer <meebey@meebey.net> 
